# Murmur

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  build.bat  config.json  config.release.json  murmur-engine.spec  requirements.txt  start_dictation.bat
Murmur/: README.txt  config.json
Murmur/prompts/: clean_system.txt
dictation-ui/: CMakeLists.txt  CMakePresets.json  vcpkg.json
dictation-ui/src/: app.cpp  app.h  dx11_helpers.cpp  dx11_helpers.h  engine_client.cpp  engine_client.h  engine_process.cpp  engine_process.h  main.cpp  murmur.rc  theme.cpp  theme.h  updater.cpp  updater.h  updater_test.cpp
docs/: gameplan.md  summary.md
prompts/: clean_system.txt  detailed_system.txt  dev_system.txt  prompt_system.txt  transcribe_clean.txt  transcribe_detailed.txt  transcribe_summarize.txt
services/: audio.py  commands.py  config.py  dsp.py  engine_state.py  llm.py  output.py  recording.py  server.py  transcriber.py  transcript.py  tray.py  vad.py  window_detect.py
